adding help files for new cmdlet

--- a/src/ResourceManager/IotHub/Commands.IotHub/Commands.IotHub.csproj
+++ b/src/ResourceManager/IotHub/Commands.IotHub/Commands.IotHub.csproj
@@ -129,6 +129,8 @@
     <None Include="help\Add-AzureRmIotHubCertificate.md" />
     <None Include="help\Add-AzureRmIotHubEventHubConsumerGroup.md" />
     <None Include="help\Add-AzureRmIotHubKey.md" />
+    <None Include="help\Add-AzureRmIotHubRoute.md" />
+    <None Include="help\Add-AzureRmIotHubRoutingEndpoint.md" />
     <None Include="help\AzureRM.IotHub.md" />
     <None Include="help\Get-AzureRmIotHub.md" />
     <None Include="help\Get-AzureRmIotHubCertificate.md" />
@@ -139,6 +141,8 @@
     <None Include="help\Get-AzureRmIotHubKey.md" />
     <None Include="help\Get-AzureRmIotHubQuotaMetric.md" />
     <None Include="help\Get-AzureRmIotHubRegistryStatistic.md" />
+    <None Include="help\Get-AzureRmIotHubRoute.md" />
+    <None Include="help\Get-AzureRmIotHubRoutingEndpoint.md" />
     <None Include="help\Get-AzureRmIotHubValidSku.md" />
     <None Include="help\New-AzureRmIotHub.md" />
     <None Include="help\New-AzureRmIotHubExportDevices.md" />
@@ -147,8 +151,13 @@
     <None Include="help\Remove-AzureRmIotHubCertificate.md" />
     <None Include="help\Remove-AzureRmIotHubEventHubConsumerGroup.md" />
     <None Include="help\Remove-AzureRmIotHubKey.md" />
+    <None Include="help\Remove-AzureRmIotHubRoute.md" />
+    <None Include="help\Remove-AzureRmIotHubRoutingEndpoint.md" />
     <None Include="help\Set-AzureRmIotHub.md" />
     <None Include="help\Set-AzureRmIotHubVerifiedCertificate.md" />
+    <None Include="help\Test-AzureRmIotHubRoute.md" />
+    <None Include="help\Update-AzureRmIotHub.md" />
+    <None Include="help\Update-AzureRmIotHubRoute.md" />
     <Content Include="Microsoft.Azure.Commands.IotHub.format.ps1xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
@@ -181,7 +190,6 @@
       <Link>AzureRM.IotHub.psd1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="help\Update-AzureRmIotHub.md" />
     <None Include="MSSharedLibKey.snk" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
