Taking review comments. Added ResourceBackupStatus object as the response of the Get-AzureRmRecoveryServicesBackupStatus cmdlet.

--- a/src/ResourceManager/RecoveryServices/Commands.RecoveryServices.Backup.Models/Commands.RecoveryServices.Backup.Models.csproj
+++ b/src/ResourceManager/RecoveryServices/Commands.RecoveryServices.Backup.Models/Commands.RecoveryServices.Backup.Models.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AzureVmModels\AzureVmRecoveryPoint.cs" />
     <Compile Include="BaseObjects.cs" />
     <Compile Include="CmdletParamEnums.cs" />
+    <Compile Include="CommonModels\ResourceBackupStatus.cs" />
     <Compile Include="CommonModels\Utils.cs" />
     <Compile Include="CommonModels\Enums.cs" />
     <Compile Include="CommonModels\PolicyRetentionObjects.cs" />
