add new test file

--- a/src/ResourceManager/IotHub/Commands.IotHub.Test/Commands.IotHub.Test.csproj
+++ b/src/ResourceManager/IotHub/Commands.IotHub.Test/Commands.IotHub.Test.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ScenarioTests\IotHubController.cs" />
+    <Compile Include="ScenarioTests\IotHubRoutingTests.cs" />
     <Compile Include="ScenarioTests\IotHubTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -115,6 +116,9 @@
     </None>
     <None Include="ScenarioTests\Assert.ps1" />
     <None Include="ScenarioTests\Common.ps1" />
+    <None Include="ScenarioTests\IotHubRoutingTests.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="ScenarioTests\IotHubTests.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
