--- a/src/Commands.ScenarioTests.ResourceManager.Common/Commands.ScenarioTests.ResourceManager.Common.csproj
+++ b/src/Commands.ScenarioTests.ResourceManager.Common/Commands.ScenarioTests.ResourceManager.Common.csproj
@@ -189,8 +189,8 @@
       <Project>{5ee72c53-1720-4309-b54b-5fb79703195f}</Project>
       <Name>Commands.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ServiceManagement\Common\Commands.ServiceManagement.Common\Commands.ServiceManagement.Common.csproj">
-      <Project>{cff09e81-1e31-444e-b4d4-a21e946c29e2}</Project>
+    <ProjectReference Include="..\Commands.ServiceManagement.Common\Commands.ServiceManagement.Common.csproj">
+      <Project>{CFF09E81-1E31-444E-B4D4-A21E946C29E2}</Project>
       <Name>Commands.ServiceManagement.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Commands.Common.Authentication.ResourceManager\Commands.Common.Authentication.ResourceManager.csproj">
