Fix netcore and jenkins build

--- a/src/ResourceManager/Common/Commands.ResourceManager.Common/Common.ResourceManager.Netcore.csproj
+++ b/src/ResourceManager/Common/Commands.ResourceManager.Common/Common.ResourceManager.Netcore.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication.Abstractions\Common.Authentication.Abstractions.Netcore.csproj" />
     <ProjectReference Include="..\..\..\Common\Commands.Common\Common.Netcore.csproj" />
+    <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication\Common.Authentication.Netcore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
