[Azure.Storage] Add format tag

--- a/src/Storage/Commands.Storage/Commands.Storage.Netcore.csproj
+++ b/src/Storage/Commands.Storage/Commands.Storage.Netcore.csproj
@@ -67,6 +67,9 @@
     <None Update="Microsoft.WindowsAzure.Commands.Storage.format.ps1xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Microsoft.WindowsAzure.Commands.Storage.generated.format.ps1xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Microsoft.WindowsAzure.Commands.Storage.types.ps1xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
