--- a/src/Storage/Commands.Storage/Commands.Storage.csproj
+++ b/src/Storage/Commands.Storage/Commands.Storage.csproj
@@ -214,6 +214,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
+    <None Include="Microsoft.WindowsAzure.Commands.Storage.generated.format.ps1xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Microsoft.WindowsAzure.Commands.Storage.types.ps1xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
