Shorten name of TDE test suite to fix build failure in release

--- a/src/ResourceManager/Sql/Commands.Sql.Test/Commands.Sql.Test.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql.Test/Commands.Sql.Test.csproj
@@ -171,7 +171,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ScenarioTests\AddTransparentDataEncryptionCertificateTests.cs" />
+    <Compile Include="ScenarioTests\TDECertificateTests.cs" />
     <Compile Include="ScenarioTests\BlobAuditingTests.cs" />
     <Compile Include="ScenarioTests\BlobAuditingClassicStorageTests.cs" />
     <Compile Include="ScenarioTests\AuditingClassicStorageTests.cs" />
@@ -189,7 +189,7 @@
     <Compile Include="ScenarioTests\DatabaseReplicationTests.cs" />
     <Compile Include="ScenarioTests\DatabaseCrudTests.cs" />
     <Compile Include="ScenarioTests\DataMaskingTests.cs" />
-    <None Include="ScenarioTests\AddTransparentDataEncryptionCertificateTests.ps1">
+    <None Include="ScenarioTests\TDECertificateTests.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="ScenarioTests\BlobAuditingTests.ps1">
@@ -996,25 +996,25 @@
     <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.ServerDnsAliasTests\TestServerDnsAliasRemove.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerDefaultParameterSetNoPassword.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerDefaultParameterSetNoPassword.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerDefaultParameterSetWithPassword.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerDefaultParameterSetWithPassword.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerInputObjectParameterSetNoPassword.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerInputObjectParameterSetNoPassword.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerInputObjectParameterSetWithPassword.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerInputObjectParameterSetWithPassword.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerResourceIdParameterSetNoPassword.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerResourceIdParameterSetNoPassword.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerResourceIdParameterSetWithPassword.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerResourceIdParameterSetWithPassword.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.AddTransparentDataEncryptionCertificateTests\TestAddTdeCertificateForSqlServerWithPiping.json">
+    <None Include=".\SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.TDECertificateTests\TestAddTdeCertificateForSqlServerWithPiping.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
