--- a/src/Commands.ScenarioTests.ResourceManager.Common/Common.ResourceManager.ScenarioTests.Netcore.csproj
+++ b/src/Commands.ScenarioTests.ResourceManager.Common/Common.ResourceManager.ScenarioTests.Netcore.csproj
@@ -4,12 +4,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.ScenarioTest.Common</AssemblyName>
-    <RootNamespace>Microsoft.Azure.Commands.ScenarioTest</RootNamespace>
+    <AssemblyName>Microsoft.Azure.Commands.ScenarioTests.ResourceManager.Common</AssemblyName>
+    <RootNamespace>Microsoft.Azure.Commands.ScenarioTests.ResourceManager</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(SolutionDir)artifacts\$(Configuration)</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Title>Microsoft Azure PowerShell ScenarioTests ResourceManager</Title>
+    <Description>Microsoft Azure PowerShell ScenarioTests ResourceManager library</Description>
+    <PackageTags>azure;powershell;scenariotests;resourcemanager</PackageTags>
+    <Authors>Microsoft Corporation</Authors>
+    <Copyright>Copyright © Microsoft Corporation</Copyright>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Azure/azure-powershell/preview/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Azure/azure-powershell</PackageProjectUrl>
+    <PackageOutputPath>$(SolutionDir)artifacts\Package\$(Configuration)</PackageOutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
