--- a/src/Commands.Common.KeyVault/Common.KeyVault.Netcore.csproj
+++ b/src/Commands.Common.KeyVault/Common.KeyVault.Netcore.csproj
@@ -12,6 +12,17 @@
     <WarningsAsErrors />
   </PropertyGroup>
   
+  <PropertyGroup>
+    <Title>Microsoft Azure PowerShell KeyVault</Title>
+    <Description>Microsoft Azure PowerShell KeyVault library</Description>
+    <PackageTags>azure;powershell;keyvault</PackageTags>
+    <Authors>Microsoft Corporation</Authors>
+    <Copyright>Copyright © Microsoft Corporation</Copyright>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Azure/azure-powershell/preview/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Azure/azure-powershell</PackageProjectUrl>
+    <PackageOutputPath>$(SolutionDir)artifacts\Package\$(Configuration)</PackageOutputPath>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <SignAssembly>true</SignAssembly>
     <DelaySign>true</DelaySign>
